# KaosEghis

./: PACS_PRODUCTION_READINESS.md  README.md  main.py  pyproject.toml  requirements.txt
KaosEghis/: app.py  config.py
KaosEghis/core/: clipboard_service.py  credential_store.py  eghis_connector.py  eghis_db.py  eghis_key_paste_test.py  emr_detector.py  inspector_import.py  kaospacs_client.py  kaospacs_gateway_client.py  kaospacs_patient_context.py  kaospacs_patient_context_api.py  (+11 more)
docs/: kaoseghis-automation.md  kaoseghis-clip.md  kaoseghis-design.md  kaoseghis-flu.md  kaoseghis-inj.md  kaoseghis-macro.md  kaoseghis-pacs.md  kaoseghis-plans.md  kaoseghis-scan.md  kaoseghis-scheduler.md
kaos-eghis/: .gitignore  README.md  main.py  pyproject.toml
kaos-eghis/kaos_eghis/: app.py
kaos-eghis/kaos_eghis/core/: emr_detector.py  macro_runner.py  safety_gate.py  scheduler.py  ui_targets.py
kaos-eghis/kaos_eghis/db/: database.py  repositories.py  schema.sql
kaos-eghis/kaos_eghis/ui/: main_window.py
kaos-eghis/kaos_eghis/ui/tabs/: eghis_assist_tab.py  kaosgdd_tab.py  settings_tab.py
kaos-eghis/tests/: test_imports.py
tests/: test_database_paths.py  test_debug_pacs_poll.py  test_emr_targets.py  test_imports.py  test_inspector_import.py  test_kaospacs_client.py  test_kaospacs_gateway_client.py  test_kaospacs_patient_context_api.py  test_macro_execution_v1.py  test_macro_profile_binding.py  test_navigation_ui.py  test_pacs_docs.py  test_pacs_polling.py  test_pacs_worklist.py  test_plugins_ui.py  test_scan.py  test_settings_ui.py  test_weekly_age_reporting.py
(+24 files in other folders)
