[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "KaosEghis"
version = "0.1.0"
description = "Local Windows companion shell for Eghis EMR."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "keyring>=25",
    "psutil>=5.9",
    "pygetwindow>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["KaosEghis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
